Install Tmux, Neovim, etc. via Homebrew

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,7 +80,7 @@ bind-key -n M-l  if-shell "$is_editor" "send-keys M-l"  "select-pane -R"
 #bind-key -n S-Left  if-shell "$is_editor" "send-keys S-Left"  "select-pane -L"
 #bind-key -n S-Right  if-shell "$is_editor" "send-keys S-Right"  "select-pane -R"
 
-#bind-key -n M-o select-pane -t +1
+bind-key -n M-o select-pane -t +1
 bind-key -n M-n next-window
 bind-key -n M-p previous-window
 bind-key -n M-N swap-window -d -t +1
